Fix _ in Description not showing

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -24,7 +24,7 @@ h1 {
   font-weight: bold;
   font-size: 1.8em;
   margin: 0;
-  color: #fff;
+  color: #000;
 }
 
 p {
